--- a/services/web/locales/en.json
+++ b/services/web/locales/en.json
@@ -28,6 +28,7 @@
   "about_to_delete_cert": "You are about to delete the following certificate:",
   "about_to_delete_projects": "You are about to delete the following projects:",
   "about_to_delete_tag": "You are about to delete the following tag (any projects in them will not be deleted):",
+  "about_to_delete_template": "You are about to delete the following template:",
   "about_to_delete_the_following_project": "You are about to delete the following project",
   "about_to_delete_the_following_projects": "You are about to delete the following projects",
   "about_to_delete_user_preamble": "You’re about to delete __userName__ (__userEmail__). Doing this will mean:",
@@ -164,6 +165,7 @@
   "already_have_sl_account": "Already have an __appName__ account?",
   "also": "Also",
   "alternatively_create_new_institution_account": "Alternatively, you can create a <b>new account</b> with your institution email (<b>__email__</b>) by clicking <b>__clickText__</b>.",
+  "alternatively_create_local_admin_account": "Alternatively, you can create __appName__ local admin account.",
   "an_email_has_already_been_sent_to": "An email has already been sent to <0>__email__</0>. Please wait and try again later.",
   "an_error_occured_while_restoring_project": "An error occured while restoring the project",
   "an_error_occurred_when_verifying_the_coupon_code": "An error occurred when verifying the coupon code",
@@ -515,6 +517,7 @@
   "delete_sso_config": "Delete SSO configuration",
   "delete_table": "Delete table",
   "delete_tag": "Delete Tag",
+  "delete_template": "Delete template",
   "delete_token": "Delete token",
   "delete_user": "Delete user",
   "delete_your_account": "Delete your account",
@@ -549,8 +552,6 @@
   "discount": "Discount",
   "discount_of": "Discount of __amount__",
   "discover_latex_templates_and_examples": "Discover LaTeX templates and examples to help with everything from writing a journal article to using a specific LaTeX package.",
-  "discover_research_writing_toolkit": "NEW: Discover the ultimate research writing toolkit",
-  "discover_research_writing_toolkit_description": "Add AI Assist to get unlimited access to LaTeX-tailored AI tools from Overleaf and Writefull.",
   "discover_the_fastest_way_to_search_and_cite": "Discover the fastest way to search and cite",
   "discover_why_over_people_worldwide_trust_overleaf": "Discover why over __count__ million people worldwide trust Overleaf with their work.",
   "display": "Display",
@@ -632,6 +633,7 @@
   "edit_figure": "Edit figure",
   "edit_sso_configuration": "Edit SSO Configuration",
   "edit_tag": "Edit Tag",
+  "edit_template": "Edit template",
   "edit_your_custom_dictionary": "Edit your custom dictionary",
   "editing": "Editing",
   "editing_and_collaboration": "Editing and collaboration",
@@ -729,6 +731,7 @@
   "explore_all_plans": "Explore all plans",
   "export_csv": "Export CSV",
   "export_project_to_github": "Export Project to GitHub",
+  "failed_to_publish_as_a_template": "Failed to publish as a template.",
   "failed_to_send_group_invite_to_email": "Failed to send Group invite to <0>__email__</0>. Please try again later.",
   "failed_to_send_managed_user_invite_to_email": "Failed to send Managed User invite to <0>__email__</0>. Please try again later.",
   "failed_to_send_sso_link_invite_to_email": "Failed to send SSO invite reminder to <0>__email__</0>. Please try again later.",
@@ -1257,6 +1260,7 @@
   "loading_prices": "loading prices",
   "loading_recent_github_commits": "Loading recent commits",
   "loading_writefull": "Loading Writefull",
+  "local_account": "Local account",
   "log_entry_description": "Log entry with level: __level__",
   "log_entry_maximum_entries": "Maximum log entries limit hit",
   "log_entry_maximum_entries_enable_stop_on_first_error": "Try to fix the first error and recompile. Often one error causes many later error messages. You can <0>Enable “Stop on first error”</0> to focus on fixing errors. We recommend fixing errors as soon as possible; letting them accumulate may lead to hard-to-debug and fatal errors. <1>Learn more</1>",
@@ -1468,6 +1472,7 @@
   "no_search_results": "No Search Results",
   "no_selection_select_file": "Currently, no file is selected. Please select a file from the file tree.",
   "no_symbols_found": "No symbols found",
+  "no_templates_found": "No templates found.",
   "no_thanks_cancel_now": "No thanks, I still want to cancel",
   "no_update_email": "No, update email",
   "non_deletable_entity": "The specified entity may not be deleted",
@@ -1648,6 +1653,7 @@
   "please_change_primary_to_remove": "Please change your primary email in order to remove",
   "please_check_your_inbox_to_confirm": "Please check your email inbox to confirm your <0>__institutionName__</0> affiliation.",
   "please_compile_pdf_before_download": "Please compile your project before downloading the PDF",
+  "please_compile_pdf_before_publish_as_template": "Please compile your project before publishing it as a template",
   "please_compile_pdf_before_word_count": "Please compile your project before performing a word count",
   "please_confirm_email": "Please confirm your email __emailAddress__ by clicking on the link in the confirmation email ",
   "please_confirm_primary_email_or_edit": "Please confirm your primary email address __emailAddress__. To edit it, go to <0>Account settings</0>.",
@@ -1690,6 +1696,7 @@
   "presentation": "Presentation",
   "presentation_mode": "Presentation mode",
   "press_and_awards": "Press & awards",
+  "prev": "Prev",
   "previous_page": "Previous page",
   "price": "Price",
   "primarily_work_study_question": "Where do you primarily work or study?",
@@ -1753,7 +1760,7 @@
   "pt": "Portuguese",
   "public": "Public",
   "publish": "Publish",
-  "publish_as_template": "Manage Template",
+  "publish_as_template": "Publish as a Template",
   "publisher_account": "Publisher Account",
   "publishing": "Publishing",
   "pull_github_changes_into_sharelatex": "Pull GitHub changes into __appName__",
@@ -2242,11 +2249,14 @@
   "tell_the_project_owner_and_ask_them_to_upgrade": "<0>Tell the project owner</0> and ask them to upgrade their Overleaf plan if you need more compile time.",
   "template": "Template",
   "template_approved_by_publisher": "This template has been approved by the publisher",
+  "template_category": "Template Category",
   "template_description": "Template Description",
   "template_gallery": "Template Gallery",
   "template_not_found_description": "This way of creating projects from templates has been removed. Please visit our template gallery to find more templates.",
+  "template_title": "Template Title",
   "template_title_taken_from_project_title": "The template title will be taken automatically from the project title",
   "template_top_pick_by_overleaf": "This template was hand-picked by Overleaf staff for its high quality",
+  "template_with_this_title_exists_and_owned_by_x": "A template with this title already exists and is owned by __x__.",
   "templates": "Templates",
   "templates_admin_source_project": "Admin: Source Project",
   "templates_lowercase": "templates",
@@ -2457,6 +2467,7 @@
   "try_now": "Try Now",
   "try_papers_for_free": "Try Papers for free",
   "try_premium_for_free": "Try Premium for free",
+  "try_recompile_project": "Please try recompiling the project from scratch.",
   "try_recompile_project_or_troubleshoot": "Please try recompiling the project from scratch, and if that doesn’t help, follow our <0>troubleshooting guide</0>.",
   "try_relinking_provider": "It looks like you need to re-link your __provider__ account.",
   "try_the_new_editor": "Try the new editor",
@@ -2657,13 +2668,9 @@
   "work_offline": "Work offline",
   "work_offline_pull_to_overleaf": "Work offline, then pull to __appName__",
   "work_or_university_sso": "Work/university single sign-on",
-  "work_smarter_with_ai_assist": "Work smarter with AI Assist: AI tools built by TeXperts, for LaTeX",
-  "work_smarter_with_ai_assist_description": "Get help with everything from language suggestions and writing support to generating LaTeX tables and fixing errors.",
   "work_with_non_overleaf_users": "Work with non Overleaf users",
   "work_with_other_github_users": "Work with other GitHub users",
   "write_faster_smarter_with_overleaf_and_writefull_ai_tools": "Write faster, smarter, and with confidence with Overleaf and Writefull AI tools",
-  "write_smarter_right_now": "Write smarter, right now",
-  "write_smarter_right_now_description": "Write faster and with confidence with AI Assist—LaTeX-tailored AI tools from Overleaf and Writefull.",
   "writefull": "Writefull",
   "writefull_loading_error_body": "Try refreshing the page. If this doesn’t work, try disabling any active browser extensions to check they aren’t blocking Writefull from loading.",
   "writefull_loading_error_title": "Writefull didn’t load correctly",
@@ -2704,8 +2711,11 @@
   "you_can_select_or_invite_collaborator": "You can select or invite __count__ collaborator on your current plan. Upgrade to add more editors or reviewers.",
   "you_can_select_or_invite_collaborator_plural": "You can select or invite __count__ collaborators on your current plan. Upgrade to add more editors or reviewers.",
   "you_can_still_use_your_premium_features": "You can still use your premium features until the pause becomes active.",
+  "you_cant_add_or_change_password_due_to_ldap_or_sso": "You can’t add or change your password because your group or organization uses LDAP or SSO.",
   "you_cant_add_or_change_password_due_to_sso": "You can’t add or change your password because your group or organization uses <0>single sign-on (SSO)</0>.",
   "you_cant_join_this_group_subscription": "You can’t join this group subscription",
+  "you_cant_overwrite_it": "You can’t overwrite it.",
+  "you_cant_reset_password_due_to_ldap_or_sso": "You can’t reset your password because your group or organization uses LDAP or SSO. Contact your system administrator.",
   "you_cant_reset_password_due_to_sso": "You can’t reset your password because your group or organization uses SSO. <0>Log in with SSO</0>.",
   "you_dont_have_any_add_ons_on_your_account": "You don’t have any add-ons on your account.",
   "you_dont_have_any_repositories": "You don’t have any repositories",
